--- a/CoderDiary/topics/20240726.md
+++ b/CoderDiary/topics/20240726.md
@@ -44,3 +44,8 @@
 
 实际上在`getIntVolatile`方法内部还有很多细节，涉及到寄存器寻址，这个就下次再慢慢研究了。
 本科时期其实是学习过寄存器相关知识的，但是几乎都忘光了。说不定哪天兴趣使然，会拾起来继续学习。
+
+## 关于面试
+看了网上的评价，自己主动取消了面试。薪资不如预期，面试环节似乎也不太友好。
+
+想了想这周投出去的简历，和22年比行情已经大不如前。22年一边上班一边面试，一周能有四五个，今年一周只有一个面试邀约，还有点坑。说不定只能先在现在的坑里苟着了。
