--- a/CoderDiary/topics/20240727.md
+++ b/CoderDiary/topics/20240727.md
@@ -1,1 +1,7 @@
 # 2024.7.27 轻松愉快的周末……？ 
+
+今天确实是轻松愉快，早上醒来看看新闻，下午玩玩王国之泪，一天就这样过去了。
+
+这个博客是用`Writerside`写的，虽然官网只是说可以用来写技术文档，但是我感觉用来写博客也挺简洁。
+
+唯一的问题的就是右下角的**powered by**似乎没办法去掉，今天早上起来看了官网和youtrack似乎也没有提到这个问题，大概作为使用者也必须体现`Writerside`的版权吧。
