--- a/CoderDiary/topics/20240728.md
+++ b/CoderDiary/topics/20240728.md
@@ -1,4 +1,4 @@
-# 2024.7.28 下雨
+# 2024.7.28 下雨的周日
 
 外面在下很大的雨。
 
@@ -30,4 +30,11 @@
 
 既然要做想做的事，我觉得任何时候去做都不迟。不必顾虑那么多，只管去做。
 
-PS：这是一个简单的博客，但是似乎无法增加评论功能，我还是渴望与人交流，或许后面还是需要自己建站……
+PS：这是一个简单且简陋的博客页面，但是似乎无法增加评论功能。我仍然渴望与人交流，或许后面还是需要自己建站……
+
+## 凌晨更新
+晚11点半才落地，回到出差地。晚上在路途上突然有了一些灵感，知道自己接下来要做什么。
+
+这段时间其实独处的时候比较少，很多思绪在独处的时候才会清晰。
+
+我们这一生，陪伴家人，养育孩子，照顾宠物，和同事扯皮，和客户撕逼，很多时候需要静下来心来，慢慢思考，慢慢感悟，有时候才能真的知道自己要什么，要做什么。
