--- a/CoderDiary/topics/20240805.md
+++ b/CoderDiary/topics/20240805.md
@@ -1,21 +1,6 @@
-# 2024.8.5 继续Kotlin基本语法
+# 2024.8.5 加班！加油！
 
-## Kotlin基本语法（换汤不换药，熟悉的味道） {id="kotlin_grammar"}
-### 分支结构
-Kotlin的分支结构和Java大同小异，但是稍有不同语法，一种是熟悉的`if`, 一种是类似于Java中`switch`的`when`关键字.
-#### when
-`when`可以用statement和expression两种书写方式, 当使用表达式时, Kotlin可以自动检测是否涵盖了所有的情况. 如果没有, 则必须报错.
-
-### 循环结构
-
-#### for
-
-#### while
-
-### 函数
-Kotlin具有函数式编程思想. 所以函数的声明和Java有些不一样而且很简单.
-
-### lambda表达式类型
+太累了不更，明天写（真的要猝死了）
 
 
-### 函数中的Unit
+
