--- a/CoderDiary/topics/20240809.md
+++ b/CoderDiary/topics/20240809.md
@@ -262,7 +262,7 @@ fun main() {
 在Java中，lambda 作为参数的一个典型应用场景是`Stream`中各类API的入参。
 ```Java
 List<Integer> list = new ArrayList<>();
- 
+list.map(it -> it *2);
 ```
 
 ### 将lambda表达式作为函数返回值 {id="lambda_2"}
