又写了一点，什么时候才能写完🤔

--- a/CoderDiary/topics/20240809.md
+++ b/CoderDiary/topics/20240809.md
@@ -259,13 +259,74 @@ fun main() {
 接下来我们对这三点一一进行实践。
 
 ### 将lambda表达式作为函数参数 {id="lambda_1"}
-在Java中，lambda 作为参数的一个典型应用场景是`Stream`中各类API的入参。
-```Java
-List<Integer> list = new ArrayList<>();
-list.map(it -> it *2);
+在Java中，lambda作为参数的一个典型应用场景是`Stream`中各类API的入参。在Kotlin中lambda表达式同样支持这样的用法。
+<tabs>
+<tab title="Kotlin">
+
+（又一次偷懒使用了官方的代码，但是官方的示例确实简洁明了）
+
+```Kotlin
+fun main() {
+    val numbers = listOf(1, -2, 3, -4, 5, -6)
+
+
+    val positives = numbers.filter ({ x -> x > 0 })
+
+    val isNegative = { x: Int -> x < 0 }
+    val negatives = numbers.filter(isNegative)
+
+    println(positives)
+    // [1, 3, 5]
+    println(negatives)
+    // [-2, -4, -6]
+
+}
 ```
 
+</tab>
+<tab title="Java">
+
+```Java
+List<Integer> list = new ArrayList<>();
+list.stream().map(it -> it *2);
+```
+
+</tab>
+</tabs>
+
 ### 将lambda表达式作为函数返回值 {id="lambda_2"}
+
+Kotlin中函数的返回值可以是一个lambda表达式。如何理解这种场景呢？首先我们得理解Kotlin中的“函数式编程”思想，函数在Kotlin中其实也是一种类型。
+
+虽然形式和使用方法上和Int、String有一些差异，但是都可以作为另一个函数的参数和返回值。
+
+在理解了这一点后，我们把lambda表达式当成一种特殊的类型进行返回就很容易接受这种写法了。
+
+继续上官网的例子：
+
+```Kotlin
+fun toSeconds(time: String): (Int) -> Int = when (time) {
+    "hour" -> { value -> value * 60 * 60 }
+    "minute" -> { value -> value * 60 }
+    "second" -> { value -> value }
+    else -> { value -> value }
+}
+
+fun main() {
+    val timesInMinutes = listOf(2, 10, 15, 1)
+    val min2sec = toSeconds("minute")
+    val totalTimeInSeconds = timesInMinutes.map(min2sec).sum()
+    println("Total time is $totalTimeInSeconds secs")
+    // Total time is 1680 secs
+}
+```
+
+我们对上面的代码一一进行说明：
+1. 函数`toSeconds`的参数声明很好理解，在`:`之后是这个函数的返回值类型声明：**`(Int) -> Int`**。这段表达式使用`->`分隔为两个部分：第一个部分为参数类型；第二个部分是方法体的返回值类型。
+2. 函数`toSeconds`使用了表达式写法，所以在返回值声明后紧接着使用了`=`连接方法体。
+3. 在`when`表达式中，出现了**value**这个变量，这个变量在前面没有声明过，此处也没有指定它的类型。那为什么这样的代码可以通过编译呢，因为这段代码符合我们上面提到的lambda表达式的几大特点：用`->`分隔为两部分，前面是参数，后面是方法体。这是因为这里的参数的类型通过自动推断，不需要再进行声明了。
+4. 在`main`方法中，通过`val min2sec = toSeconds("minute")`生成了一个lambda表达式：**`{ value -> value * 60 }`**。
+5. 将lambda表达式作为参数，传递给数组的map方法。数组的元素作为参数（Int类型），经过lambda表达式的计算，输出Int类型的结果。
 
 ### 直接调用lambda表达式 {id="lambda_3"}
 
