--- a/CoderDiary/topics/20240809.md
+++ b/CoderDiary/topics/20240809.md
@@ -243,7 +243,7 @@ fun main() {
 
 上面就是一个简单的lambda表达式，可见虽然lambda表达式足够简洁，但是在代码阅读成本上也增加了不少。
 
-***但是lambda还能写的更简单，如果没有参数的话：***
+***lambda还能写的更简单，如果没有参数的话：***
 
 ```Kotlin
 { println("Log message") }
@@ -330,4 +330,30 @@ fun main() {
 
 ### 直接调用lambda表达式 {id="lambda_3"}
 
+直接调用lambda表达式的写法其实有些别扭，但是结合函数语法也可以进行类比。
+
+一般的函数调用写法其实就是`f(x)`，f表示了函数名称，括号和括号内的变量组成了入参列表。
+
+而lambda表达式的直接调用其实就是用简短的lambda函数直接替换`f`这个函数名称。如下：
+
+```Kotlin
+println({ text: String -> text.uppercase() }("hello"))
+```
+
+上面的代码中，大括号里的`text: String -> text.uppercase()`表示了一段lambda表达式。在大括号后，紧跟了一个小括号，注意这里的小括号就代表了参数列表。小括号中传递了一个字符串作为参数。
+
+上面的代码可以改写成：
+
+```Kotlin
+val uppper = { text: String -> text.uppercase() }
+
+println(upper("hello"))
+```
+
+将lambda表达式赋值给变量，通过变量来调用，这样子就很好理解了。
+
 ## 函数中的Unit
+
+这个需要单独开一章讲了。`Unit`是Kotlin中的一个特殊对象，也是语法中内置的一个对象。
+
+比较神奇的就是在Kotlin中每一个函数返回的对象都是`Unit`。
