--- a/CoderDiary/topics/20240826.md
+++ b/CoderDiary/topics/20240826.md
@@ -48,6 +48,8 @@ CPU的三级缓存最慢，但容量最大，访问速度大概40~45个时钟周
 
 > Java中的指令重排序有两次，第一次发生在将字节码编译成机器码的阶段，第二次发生在CPU执行的时候，也会适当对指令进行重排。
 
+即Java中存在编译器重排序和处理器重排序。
+
 ## JMM(Java Memory Model)
 
 Java内存模型分为主存和线程本地内存。如果把线程比作一个CPU，主存比作RAM，我们会发现Java的内存模型和CPU的缓存模型十分相似。
