:memo: JVM 内存区域

--- a/CoderDiary/topics/20240826.md
+++ b/CoderDiary/topics/20240826.md
@@ -15,6 +15,14 @@
 在操作系统层面，线程的运行往往分为就绪（ready）和运行（running）两个状态，但是在JVM的实现中，将这两个状态合二为一，统称运行（runnable）状态。
 这是因为在现代的时分多任务操作系统下，一个CPU时间分片只有10~20ms，线程的状态切换的如此之快，更别提就绪和运行两个状态的转换了。对于JVM来说已经没有监控这两个状态变换的必要了，所以直接将两个状态合二为一。
 
+> 在Java中每一个线程获取的时间分片都相等吗？这个问题的答案取决于当前操作系统的调度策略。
+> 操作系统的调度策略一般分为两种：
+> - 抢占式调度策略：在调度过程中，操作系统会根据线程优先级分配给线程一定的CPU时间片，并且在时间片用完后强制切换到下一个线程。在这种模式中可以认为每一个线程每次获取到的时间片是相等的，
+> 但是由于线程的优先级不同，高优先级的线程会有更多的机会获取CPU时间片。
+> - 协作式调度策略：在这种策略下，操作系统不会主动切换线程，而是由正在执行的线程完成任务后，通知操作系统切换到下一个线程。显而易见的，如果某个线程执行的过程较长，会导致后面的线程一直阻塞。
+>
+{style="note"}
+
 ## CPU缓存模型
 
 在讲JVM内存模型之前，可以先讲讲CPU的内存模型，两者之间有很多共通点。
@@ -57,4 +65,3 @@ Java内存模型分为主存和线程本地内存。如果把线程比作一个C
 ![JMM.png](JMM.png){ thumbnail="true" }
 
 在Java的内存模型中，也需要解决主内存和线程本地内存的缓存一致性问题，而这个问题在JVM中有几种解决方案，这也是Java并发编程最核心的知识点。
-
