开源中国体验

--- a/CoderDiary/topics/程序员可以看哪些资讯网站？.md
+++ b/CoderDiary/topics/程序员可以看哪些资讯网站？.md
@@ -1,5 +1,7 @@
 # 程序员可以看哪些资讯网站？
 
+开发者可以从新闻资讯中了解行业最新动态，也可以知道各类开源产品的更新迭代。
+
 一直在想程序员可以看的资讯网站。目前列举如下：
 
 国内：
@@ -17,3 +19,10 @@
 - Reddit
 
 每个网站使用三到五天的时间进行体验。
+
+从以下几个指标进行体验：
+
+1. 是否跨平台？
+2. 网页端首页的布局是否方便快速地获取资讯？
+3. 资讯的准确度以及更新频率 
+4. 移动端体验
