--- a/CoderDiary/topics/数码分享.md
+++ b/CoderDiary/topics/数码分享.md
@@ -1,3 +1,9 @@
 # About 数码分享
 
-Start typing here...
+是一个数码爱好者，但是兜里没钱，只能在网上看别人买的数码产品。
+
+一直觉得，没有深度体验过一个数码产品是没有资格去做分享的，但是现实和理想总有差距。
+
+这个专栏，可能不会更新很多，但是无论如何，也希望自己保持一颗极客的心。
+
+另外，发现了***少数派***这个社区，似乎是一群很酷的人在做很酷的产品，打算看一看少数派作家写的文章，希望能从中学到一些东西。
