--- a/CoderDiary/topics/近期购入的数码产品.md
+++ b/CoderDiary/topics/近期购入的数码产品.md
@@ -1,3 +1,35 @@
 # 近期购入的数码产品
 
-Start typing here...
+这一趟出差，零零碎碎买了很多（指对钱包的压力很多）数码产品。一部分是为了提高我在外出差的生活质量，一部分是因为意外而购入的。
+
+其实很久没有在数码产品上有过消费了，记得上一次买的数码产品还是22年购入的索尼降噪豆WF-1000XM4。
+而新买到的产品，其实能看得出来在设计语言上比起以前有所变化，而且更加Geek。
+
+下面就来一一介绍一下：
+
+## 至繁归于至简——漫步者GT2S（TWS）
+
+![GT2S包装.jpg](GT2S包装.jpg)
+
+（包装拍得有点模糊了……）
+
+其实无线耳机我已经有好几个了，最早买的二代Air Pods，WF-1000XM4，WH-1000XM3，以及买PS5的时候同时购入的PULSE 3D。
+
+每一款都有适用的场景，但是每一款也有不好用的地方。在这之前我一直以为我的耳机已经足够覆盖所有的场景了：办公听音乐用Air Pods，舒适；夏天外出用WF-1000XM4；
+冬天外出用WH-1000XM3；玩游戏用PULSE 3D……
+
+直到我谈了恋爱，和女友开始频繁的视频，我才发现原来蓝牙耳机的音质不能同时保证“听”和“说”……
+
+***这是因为蓝牙带宽有限，无法在保证高音质的同时进行双向通信。***
+
+虽然我不是什么黄金耳朵，但是太差的音质我也不能容忍，于是开始想解决办法。
+
+最后我找到了答案，那就是***2.4G TWS***！
+
+使用2.4G的无线蓝牙耳机有足够的带宽来保证进行通话的同时能原封不动的输出该有的音质（取决于耳机本身的配置）。
+
+后来在B站上也看了相关的测评，这是评测比较全面的一个视频。
+
+<a href="https://www.bilibili.com/video/BV1oK421C7LW/?share_source=copy_web&vd_source=16fa824e2fb359ab23a776a7499f59b8">【建议收藏】我们买遍了2.4G真无线游戏耳机，告诉你谁更值得买</a>
+
+看完我马上下单，买了一款视频里没有——漫步者GT2S。
