完善当前的文章

--- a/CoderDiary/topics/程序员可以看哪些资讯网站？.md
+++ b/CoderDiary/topics/程序员可以看哪些资讯网站？.md
@@ -1,6 +1,8 @@
-# 程序员可以看哪些资讯网站？
+# 程序员可以看的5大资讯网站！
 
 开发者可以从新闻资讯中了解行业最新动态，也可以知道各类开源产品的更新迭代。
+
+起初是因为平时在手机上只会刷刷知乎，某一天突然灵光一现，既然都是刷手机，不如刷刷技术论坛。
 
 一直在想程序员可以看的资讯网站。目前列举如下：
 
@@ -26,3 +28,6 @@
 2. 网页端首页的布局是否方便快速地获取资讯？
 3. 资讯的准确度以及更新频率 
 4. 移动端体验
+5. 社区的讨论热度
+
+![目录结构.png](目录结构.png)
