--- a/CoderDiary/topics/近期购入的数码产品.md
+++ b/CoderDiary/topics/近期购入的数码产品.md
@@ -24,12 +24,10 @@
 
 虽然我不是什么黄金耳朵，但是太差的音质我也不能容忍，于是开始想解决办法。
 
-最后我找到了答案，那就是***2.4G TWS***！
+最后我找到了答案，那就是 ***2.4G TWS*** ！
 
 使用2.4G的无线蓝牙耳机有足够的带宽来保证进行通话的同时能原封不动的输出该有的音质（取决于耳机本身的配置）。
 
-后来在B站上也看了相关的测评，这是评测比较全面的一个视频。
+后来在B站上也看了相关的测评，这是评测比较全面的一个视频：<a href="https://www.bilibili.com/video/BV1oK421C7LW/?share_source=copy_web&vd_source=16fa824e2fb359ab23a776a7499f59b8">【建议收藏】我们买遍了2.4G真无线游戏耳机，告诉你谁更值得买</a>
 
-<a href="https://www.bilibili.com/video/BV1oK421C7LW/?share_source=copy_web&vd_source=16fa824e2fb359ab23a776a7499f59b8">【建议收藏】我们买遍了2.4G真无线游戏耳机，告诉你谁更值得买</a>
-
-看完我马上下单，买了一款视频里没有——漫步者GT2S。
+看完我马上下单，买了一款视频里没有的——漫步者GT2S。
