--- a/CoderDiary/topics/20240822.md
+++ b/CoderDiary/topics/20240822.md
@@ -9,11 +9,10 @@
 
 然而没有一成不变的世界，他也变成了众多裸辞打工人中的一员。
 
-
 我能理解事物总是处在变化中，当下的社会需要人不断去适应。但是每个人肩上的压力为什么越来越大呢？不断地适应，不断地提升，似乎还是摆不脱这桎梏。
 
 三十而立。
 
 上次总监说立的是人生的方向和志向。
 
-我觉得立的是一个不迷茫不彷徨的灵魂。
+我觉得立的是一个不迷茫和不彷徨。
