--- a/CoderDiary/topics/2024-9-21-大风.md
+++ b/CoderDiary/topics/2024-9-21-大风.md
@@ -10,6 +10,8 @@
 
 这一瞬间，我感受到了鲜活的生命力，在过去很长一段时间不曾有过的生命力。
 
+人生就像一部短篇小说，很快就翻完了。我们都尽力在不长的篇幅中留下让读者惊艳的瞬间。
+
 我不记得我在什么地方说过，这几年似乎变得很麻木，对时光的流逝失去了概念，过去几年的记忆非常模糊。
 
 某个夜晚我躺在床上，静静地想了过去几年，记忆一点一点清晰。某一年我在什么地方，大致在做什么。后来那一晚思绪已经不受控制，不断地回溯着我从未细细感受过的过往。
@@ -17,7 +19,7 @@
 
 我给老大打电话告知最终结果的时候，不知道为什么，我突然眼眶湿润，在我还没反应过来的时候我的手已经捂住了我的嘴，让我不至于哭出声来。
 
-成年后我很少因为某件事痛哭流涕，我以为我会很平静地面对辞职这件事，我尽力让自己的内心完全的接受这件事情，但是电话里的我仍然泣不成声。
+成年后我很少因为某件事痛哭流涕，我以为我会很平静地面对辞职这件事，我尽力让自己的内心坦然地接受这件事情，但是情绪汹涌而出，电话里的我仍然泣不成声。
 
 我们都是走在路上的人，有的人到了中间站，有的人到了终点站，到了终点不意味着成功，但只要在路上，我们就没有失败。
 
