--- a/CoderDiary/topics/稀土掘金.md
+++ b/CoderDiary/topics/稀土掘金.md
@@ -1,3 +1,34 @@
-# 稀土掘金
+# 稀土掘金（juejin）
 
-掘金的热榜并不是新闻资讯类的，而是按照文章的热度进行排行。所以热榜中的文章大多是针对某一技术点的深度解读，需要花点时间仔细阅读，甚至需要动手写一写代码。
+稀土掘金（以下简称掘金）是一个专注于技术内容分享和交流的平台，它为广大程序员们提供了一个学习、分享和解决问题的场所。无论你是初学者还是资深开发者，都可以在这里找到适合自己的学习资源和交流伙伴。
+
+由于掘金主要专注于学习和分享，掘金的热榜并不是新闻资讯类的，而是按照文章的热度进行排行。所以热榜中的文章大多是针对某一技术点的深度解读，需要花点时间仔细阅读，甚至需要动手写一写代码。
+
+在资讯获取上，不如开源中国那么直观，需要自己筛选数据。
+
+## 多端应用
+
+掘金有PC网页端，App（已上架各大应用商店），手机网页端，微信公众号。
+
+## 内容板块
+
+### 首页
+
+掘金的首页更像论坛贴吧，结构很简单，网页端的主界面就是版区和文章/帖子，首页也给出了两个小榜单，一个是文章榜一个是作者榜。
+
+![掘金.png](掘金.png) {thumbnail="true"}
+
+首页的推荐贴更新频率是挺快的，但是基本都不是资讯性质的。
+
+移动端网页版的首页也非常简单，内容和网页版差不多，只是改变了布局。
+
+![掘金手机版.jpg](掘金手机版.jpg) {thumbnail="true" width="200"}
+
+但是比较方便的是移动端网页版点击文章就可以浏览文章的全部，不会有需要下App的提示。
+
+App端的首页也很简洁，做了上下区域，上半部分是热榜，下半部分是文章列表。
+
+![mobile-juejin.jpg](mobile-juejin.jpg) {thumbnail="true" width="200"}
+
+不过如果是看资讯的话，最好用的还是掘金App，因为资讯板块只在App上有。
+
