--- a/CoderDiary/topics/20250806.md
+++ b/CoderDiary/topics/20250806.md
@@ -15,26 +15,26 @@
 
 **完成核心功能, 模型驱动生成前端页面.**
 
-任务拆解: 
+任务拆解:
 
 - 后端确定模型相关的元数据注解
-  - 模型本身的注解
-    - 确定模型所包含的元数据后才能确定其注解 ✔️
-  - 模型字段的注解
-    - 确定字段所包含的元数据后才能确定其注解 ✔️
-  - 系统启动时对元数据的提取和解析, 形成结构化数据 ✔️
-    - 暂时使用本地缓存, 后面需要存储到数据库 ✔️
-    - 需要集成spring-boot ✔️
-    - 需要集成spring-web, 暂时先手写接口 ✔️
-  - 提供接口, 可以让前端自动查询到该模型的菜单权限数据, 以及模型的元数据
-    - 模型元数据接口 ✔️
-    - 模型数据接口
-    - 菜单权限接口(但是现在还没有菜单权限, 默认渲染一个菜单先)
+    - 模型本身的注解
+        - 确定模型所包含的元数据后才能确定其注解 ✔️
+    - 模型字段的注解
+        - 确定字段所包含的元数据后才能确定其注解 ✔️
+    - 系统启动时对元数据的提取和解析, 形成结构化数据 ✔️
+        - 暂时使用本地缓存, 后面需要存储到数据库 ✔️
+        - 需要集成spring-boot ✔️
+        - 需要集成spring-web, 暂时先手写接口 ✔️
+    - 提供接口, 可以让前端自动查询到该模型的菜单权限数据, 以及模型的元数据
+        - 模型元数据接口 ✔️
+        - 模型数据接口
+        - 菜单权限接口(但是现在还没有菜单权限, 默认渲染一个菜单先)
 - 需要创建前端项目, 具备基本的路由、component用以渲染数据
-  - 前端技术选型Vue3
-  - 前端需要有基本的菜单、header、footer和主体区域(是否有脚手架)
-  - 前端需要能解析元数据并在主体区域进行渲染对应的组件
-  - 前端能够根据模型元数据查询模型相关的数据, 并进行渲染
+    - 前端技术选型Vue3 ✔️
+    - 前端需要有基本的菜单、header、footer和主体区域(是否有脚手架) ✔️
+    - 前端需要能解析元数据并在主体区域进行渲染对应的组件 ✔️
+    - 前端能够根据模型元数据查询模型相关的数据, 并进行渲染 ✔️
 
 ## 最终的效果
 
@@ -45,4 +45,4 @@
 3. 使用一些缓存数据让前端渲染出来
 
 > 第一步先做展示, 相关的form待开发, form相关组件需要慢慢开发
-{style="warning"}
+> {style="warning"}
