--- a/CoderDiary/topics/20240804.md
+++ b/CoderDiary/topics/20240804.md
@@ -1,4 +1,4 @@
-# 2024.8.4 Kotlin基本语法（Java对比）
+# Kotlin基本语法（Java对比）
 其实昨晚的时候就在看Kotlin的官方文档，在`Kotlin 1.0`版本的时候就大致翻过一遍。但是当初只是匆匆一瞥，对函数式的语法感到十分新奇。
 
 最近打算好好学习一下Kotlin，尝试一下跨平台开发。
