📝 docs(CoderDiary): 添加Oracle基础概念与常用命令文档 - 新增《Oracle基础概念》文档，介绍数据库、实例、表空间等核心概念 - 新增《Oracle常用命令》文档，收录常用SQL命令- 新增《Java命令行中文乱码》解决方案文档- 更新目录树，添加上述三篇新文档的索引 - 优化《20240725》文档中CAS原理的表述与格式

--- a/CoderDiary/topics/20240725.md
+++ b/CoderDiary/topics/20240725.md
@@ -62,11 +62,13 @@
 就是就一开始说的`Compare And Swap`比较并交换。
 
 ## CAS原理
+
 在`CAS`中具有以下三个值：
 - V：要更新的变量(var)
 - E：预期值(expected)
 - N：新值(new)
-在以下的代码中（来自JDK17），V由对象o和offset计算得出（此处的偏移量还没完全理解），E代表expected，N代表x。
+
+- 在以下的代码中（来自JDK17），V由对象o和offset计算得出（此处的偏移量还没完全理解），E代表expected，N代表x。
 ```Java
     @IntrinsicCandidate
     public final native boolean compareAndSetInt(Object o, long offset,
